--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <head>  
     </head>
     <body>
-        <div class="container">
+        <div class="container" align="center">
             <h1><p id="output"><b>00:00:00</b></p></h1>
         <div id="controls" align="center">
 	        <button id= "startPause" onclick="startPause()"><b id="start">Start</b></button>
-	        <button onclick="reset()" id="reset"><b id="reset">Reset</b></button>
+	        
         </div>
         </div>
         <script src="timer.js"></script>
